--- a/1001/.settings/org.eclipse.core.resources.prefs
+++ b/1001/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/com/mc/controller/LoginServlet.java=UTF-8
 encoding//src/com/mc/utils/JDBCUtil.java=UTF-8
 encoding//src/com/mc/utils/RegexUtils.java=UTF-8
+encoding/<project>=UTF-8
