--- a/1001/WebContent/WEB-INF/web.xml
+++ b/1001/WebContent/WEB-INF/web.xml
@@ -29,6 +29,14 @@
   	<servlet-name>logout</servlet-name>
   	<url-pattern>/logout</url-pattern>
   </servlet-mapping>
+  <servlet>
+  	<servlet-name>save_article</servlet-name>
+  	<servlet-class>com.mc.controller.ArticleServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>save_article</servlet-name>
+  	<url-pattern>/saveArticle</url-pattern>
+  </servlet-mapping>
   
   <filter>
     <filter-name>character</filter-name>
